Theme: increase spacing for Kultunaut logo

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-header.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-header.scss
@@ -144,6 +144,10 @@ $lg-flexy-header-static-row-second-height: 60px;
       height: 26px;
     }
   }
+
+  + .flexy-header__secondary-navigation {
+    margin-left: floor( ( $grid-gutter-width / 2 ) );
+  }
 }
 
 // --------------------------------------------------
