--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_kultunaut-activity.scss
@@ -119,6 +119,10 @@
 
     &.panels-layout--content-with-left-and-right-sidebar-top-footer {
 
+      .panels-pane-region--top {
+        min-height: 60px;
+      }
+
       .panels-pane-region--sidebar-right {
         margin-top: -50px;
       }
@@ -136,6 +140,10 @@
 
     &.panels-layout--content-with-left-and-right-sidebar-top-footer {
 
+      .panels-pane-region--top {
+        min-height: 110px;
+      }
+
       .panels-pane-region--sidebar-right {
         margin-top: -100px;
       }
@@ -149,6 +157,10 @@
   .node-type-os2web-kulturnaut-knactivity {
 
     &.panels-layout--content-with-left-and-right-sidebar-top-footer {
+
+      .panels-pane-region--top {
+        min-height: 160px;
+      }
 
       .panels-pane-region--sidebar-right {
         margin-top: -150px;
