Reorder on mobile

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/stylesheet.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/stylesheet.scss
@@ -2,6 +2,6 @@
 @import "vendor";
 
 // Drupal specific overrides (load from Bootstrap theme in themes/bootstrap)
-@import "../../../bootstrap/starterkits/sass/scss/overrides";
+//@import "../../../bootstrap/starterkits/sass/scss/overrides";
 
 @import "theme/loader";
