Fixed transiontion effect on cookie button

--- a/public_html/sites/all/modules/custom/syddjurs_eu_cookie_compliance/syddjurs_eu_cookie_compliance.css
+++ b/public_html/sites/all/modules/custom/syddjurs_eu_cookie_compliance/syddjurs_eu_cookie_compliance.css
@@ -63,3 +63,7 @@
 #sliding-popup button + button {
   margin-left: 20px;
 }
+
+.eu-cookie-compliance-popup-closed #sliding-popup.sliding-popup-popup .eu-cookie-withdraw-tab {
+  transition: none;
+}
