Fixed withdraw button background on hover

--- a/public_html/sites/all/modules/custom/syddjurs_eu_cookie_compliance/syddjurs_eu_cookie_compliance.css
+++ b/public_html/sites/all/modules/custom/syddjurs_eu_cookie_compliance/syddjurs_eu_cookie_compliance.css
@@ -66,4 +66,5 @@
 
 .eu-cookie-compliance-popup-closed #sliding-popup.sliding-popup-popup .eu-cookie-withdraw-tab {
   transition: none;
+  background: #ffffff;
 }
